--- a/environment.yaml
+++ b/environment.yaml
@@ -1,33 +1,75 @@
-# Install the project conda environment by running 
-# the following command in your conda base environment:
-# conda env create -f environment.yaml
-name: '522'
+name: 522Group3
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - python=3.11.*
-  - pip
-  - ipykernel
-  - nb_conda_kernels
-  - altair=5.1.2
-  - vl-convert-python  # For saving altair charts as static images
-  - vegafusion  # For working with charts > 5,000 graphical objects
-  - vegafusion-python-embed  # Same as the previous one
-  - vegafusion-jupyter  # For working with charts > 100,000 graphical objects
-  - vega_datasets  # Altair example data
-  - scipy
-  - matplotlib>=3.2.2
-  - scikit-learn>=1.3.1
-  - requests>=2.24.0
-  - graphviz
-  - python-graphviz
-  - eli5
-  - shap
-  - jinja2
-  - selenium<4.3.0
-  - lightgbm
+  - altair=5.1.2=pyhd8ed1ab_0
+  - attrs=23.1.0=pyh71513ae_1
+  - blas=1.0=openblas
+  - bottleneck=1.3.5=py311ha0d4635_0
+  - bzip2=1.0.8=h93a5062_5
+  - ca-certificates=2023.08.22=hca03da5_0
+  - importlib-metadata=6.8.0=pyha770c72_0
+  - importlib_resources=6.1.1=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.2.0=py311hca03da5_0
+  - jsonschema=4.20.0=pyhd8ed1ab_0
+  - jsonschema-specifications=2023.11.1=pyhd8ed1ab_0
+  - libcxx=14.0.6=h848a8c0_0
+  - libexpat=2.5.0=hb7217d7_1
+  - libffi=3.4.2=h3422bc3_5
+  - libgfortran=5.0.0=11_3_0_hca03da5_28
+  - libgfortran5=11.3.0=h009349e_28
+  - libopenblas=0.3.21=h269037a_0
+  - libsqlite=3.44.0=h091b4b1_0
+  - libzlib=1.2.13=h53f4e23_5
+  - llvm-openmp=14.0.6=hc6e5704_0
+  - markupsafe=2.1.3=py311heffc1b2_1
+  - ncurses=6.4=h463b476_2
+  - numexpr=2.8.7=py311h6dc990b_0
+  - numpy=1.26.0=py311he598dae_0
+  - numpy-base=1.26.0=py311hfbfe69c_0
+  - openssl=3.1.4=h0d3ecfb_0
+  - packaging=23.2=pyhd8ed1ab_0
+  - pandas=2.1.1=py311h7aedaa7_0
+  - pip=23.3.1=pyhd8ed1ab_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - python=3.11.6=h47c9636_0_cpython
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - python_abi=3.11=4_cp311
+  - pytz=2023.3.post1=py311hca03da5_0
+  - readline=8.2=h92ec313_1
+  - referencing=0.31.0=pyhd8ed1ab_0
+  - rpds-py=0.13.0=py311h94f323b_0
+  - scikit-learn=1.2.2=py311h313beb8_1
+  - scipy=1.11.3=py311hc76d9b0_0
+  - setuptools=68.2.2=pyhd8ed1ab_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - threadpoolctl=2.2.0=pyh0d69192_0
+  - tk=8.6.13=h5083fa2_1
+  - toolz=0.12.0=pyhd8ed1ab_0
+  - typing-extensions=4.8.0=hd8ed1ab_0
+  - typing_extensions=4.8.0=pyha770c72_0
+  - tzdata=2023c=h71feb2d_0
+  - wheel=0.41.3=pyhd8ed1ab_0
+  - xz=5.2.6=h57fd34a_0
+  - zipp=3.17.0=pyhd8ed1ab_0
   - pip:
-    - joblib==1.1.0
-    - mglearn
-    - psutil>=5.7.2
+      - appdirs==1.4.4
+      - beautifulsoup4==4.12.2
+      - certifi==2023.7.22
+      - charset-normalizer==3.3.2
+      - frozendict==2.3.8
+      - html5lib==1.1
+      - idna==3.4
+      - lxml==4.9.3
+      - multitasking==0.0.11
+      - peewee==3.17.0
+      - requests==2.31.0
+      - soupsieve==2.5
+      - urllib3==2.1.0
+      - webencodings==0.5.1
+      - yfinance==0.2.31
+prefix: /Users/yanyi/miniconda3/envs/522Group3
