--- a/environment.yaml
+++ b/environment.yaml
@@ -8,33 +8,53 @@ dependencies:
   - attrs=23.1.0=pyh71513ae_1
   - blas=1.0=openblas
   - bottleneck=1.3.5=py311ha0d4635_0
+  - brotli=1.1.0=hb547adb_1
+  - brotli-bin=1.1.0=hb547adb_1
   - bzip2=1.0.8=h93a5062_5
-  - ca-certificates=2023.08.22=hca03da5_0
+  - ca-certificates=2023.11.17=hf0a4a13_0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - fonttools=4.44.3=py311h05b510d_0
+  - freetype=2.12.1=hadb7bae_2
   - importlib-metadata=6.8.0=pyha770c72_0
   - importlib_resources=6.1.1=pyhd8ed1ab_0
   - jinja2=3.1.2=pyhd8ed1ab_1
   - joblib=1.2.0=py311hca03da5_0
   - jsonschema=4.20.0=pyhd8ed1ab_0
   - jsonschema-specifications=2023.11.1=pyhd8ed1ab_0
+  - lcms2=2.15=hd835a16_1
+  - lerc=4.0.0=h9a09cb3_0
+  - libbrotlicommon=1.1.0=hb547adb_1
+  - libbrotlidec=1.1.0=hb547adb_1
+  - libbrotlienc=1.1.0=hb547adb_1
   - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.18=h1a8c8d9_0
   - libexpat=2.5.0=hb7217d7_1
   - libffi=3.4.2=h3422bc3_5
   - libgfortran=5.0.0=11_3_0_hca03da5_28
   - libgfortran5=11.3.0=h009349e_28
+  - libjpeg-turbo=2.1.5.1=hb547adb_1
   - libopenblas=0.3.21=h269037a_0
+  - libpng=1.6.39=h76d750c_0
   - libsqlite=3.44.0=h091b4b1_0
+  - libtiff=4.5.0=h4f7d55c_6
+  - libwebp-base=1.3.2=hb547adb_0
+  - libxcb=1.15=hf346824_0
   - libzlib=1.2.13=h53f4e23_5
   - llvm-openmp=14.0.6=hc6e5704_0
   - markupsafe=2.1.3=py311heffc1b2_1
+  - matplotlib-base=3.8.0=py311h7aedaa7_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - ncurses=6.4=h463b476_2
   - numexpr=2.8.7=py311h6dc990b_0
   - numpy=1.26.0=py311he598dae_0
   - numpy-base=1.26.0=py311hfbfe69c_0
+  - openjpeg=2.5.0=hbc2ba62_2
   - openssl=3.1.4=h0d3ecfb_0
   - packaging=23.2=pyhd8ed1ab_0
   - pandas=2.1.1=py311h7aedaa7_0
   - pip=23.3.1=pyhd8ed1ab_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - pthread-stubs=0.4=h27ca646_1001
   - python=3.11.6=h47c9636_0_cpython
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
@@ -50,26 +70,65 @@ dependencies:
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.13=h5083fa2_1
   - toolz=0.12.0=pyhd8ed1ab_0
+  - tornado=6.3.3=py311heffc1b2_1
   - typing-extensions=4.8.0=hd8ed1ab_0
   - typing_extensions=4.8.0=pyha770c72_0
   - tzdata=2023c=h71feb2d_0
   - wheel=0.41.3=pyhd8ed1ab_0
+  - xorg-libxau=1.0.11=hb547adb_0
+  - xorg-libxdmcp=1.1.3=h27ca646_0
   - xz=5.2.6=h57fd34a_0
   - zipp=3.17.0=pyhd8ed1ab_0
+  - zstd=1.5.5=h4f39d0f_0
   - pip:
       - appdirs==1.4.4
+      - appnope==0.1.3
+      - asttokens==2.4.1
       - beautifulsoup4==4.12.2
       - certifi==2023.7.22
       - charset-normalizer==3.3.2
+      - comm==0.2.0
+      - contourpy==1.2.0
+      - debugpy==1.8.0
+      - decorator==5.1.1
+      - executing==2.0.1
       - frozendict==2.3.8
       - html5lib==1.1
       - idna==3.4
+      - ipykernel==6.26.0
+      - ipython==8.17.2
+      - jedi==0.19.1
+      - jupyter-client==8.6.0
+      - jupyter-core==5.5.0
+      - kiwisolver==1.4.5
       - lxml==4.9.3
+      - matplotlib==3.8.2
+      - matplotlib-inline==0.1.6
       - multitasking==0.0.11
+      - nest-asyncio==1.5.8
+      - parso==0.8.3
       - peewee==3.17.0
+      - pexpect==4.8.0
+      - pillow==10.1.0
+      - platformdirs==4.0.0
+      - prompt-toolkit==3.0.41
+      - protobuf==4.25.1
+      - psutil==5.9.6
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.2
+      - pyarrow==14.0.1
+      - pygments==2.16.1
+      - pyparsing==3.1.1
+      - pyzmq==25.1.1
       - requests==2.31.0
       - soupsieve==2.5
+      - stack-data==0.6.3
+      - traitlets==5.13.0
       - urllib3==2.1.0
+      - vegafusion==1.4.4
+      - vegafusion-python-embed==1.4.4
+      - vl-convert-python==1.1.0
+      - wcwidth==0.2.10
       - webencodings==0.5.1
       - yfinance==0.2.31
-prefix: /Users/yanyi/miniconda3/envs/522Group3
+prefix: /Users/lily/miniconda3/envs/522Group3
